# feast-centralized-feature-management

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
artifacts/: feature_service.txt  model.joblib  scaler.joblib  training_columns.json
feast_repo/: feature_store.yaml  sms_defs.py
src/feast_feature_store/: data_download.py  ingest_and_features.py  online_infer.py  train_from_feast.py
