[project]
name = "centralized-feature-management"
version = "0.1.0"
description = "Centralized Feature Management with Feast (training/serving parity demo)"
authors = [
    {name = "Nicolas Partridge",email = "nicolasdevelopment00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feast (>=0.52.0,<0.53.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "centralized_feature_management", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
ruff = "^0.12.9"
black = "^25.1.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
